# Fair-Mitigation-Toolkit

./: .gitignore  README.md  pyproject.toml  requirements.txt  toy.csv  toy_balanced.csv  toy_disparity_latent.csv  toy_imbalanced.csv  toy_no_disparity.csv
configs/: all.yaml  baseline.yaml  baseline_test.yaml  inprocess.yaml  inprocess_fair.yaml  latent.yaml  latent_test.yaml  relabel.yaml  relabel_test.yaml  smote.yaml  smote_test.yaml
scripts/: generate_latent_disparity_toy.py  generate_no_disparity_toy.py  generate_validation_suite.py  validation_table.py
src/fair_mitigator/: cli.py  fairness.py  io.py  latent.py  metrics.py  models.py  preprocessing.py  schema.py
src/fair_mitigator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fair_mitigator/mitigations/: latent.py  relabel.py
src/fair_mitigator/pipelines/: all.py  baseline.py  inprocess.py  latent.py  relabel.py  smote.py
validation_data/: class_imbalance_smote.csv  dataset_registry.csv  eo_targeted.csv  label_noise_relabel.csv  latent_disparity.csv  no_disparity.csv
