[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fair-mitigator"
version = "0.1.0"
description = "Reproducible bias mitigation toolkit (RF-based)"
authors = [{name = "Isabella MG"}]
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "imbalanced-learn>=0.11",
    "fairlearn>=0.9",
    "joblib>=1.3",
    "PyYAML>=6.0",
    "matplotlib>=3.7"
]

[project.scripts]
fair-mitigator = "fair_mitigator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
